WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/MC_Triggered_Email_Key__mdt.object-meta.xml
<CustomObject>
    <label>MC Triggered Email Key</label>
    <pluralLabel>MC Triggered Email Keys</pluralLabel>
</CustomObject>