WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>ActCall_v01</description>
    <label>Active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>