WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/fields/applicationRequestID__c.field-meta.xml
<CustomField>
    <fullName>applicationRequestID__c</fullName>
    <label>applicationRequestID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>