WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <label>ContactType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>