WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/fields/createddate__c.field-meta.xml
<CustomField>
    <fullName>createddate__c</fullName>
    <label>createddate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>