WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <label>OpportunityID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>