WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <referenceTo>MC_Triggered_Email__mdt</referenceTo>
    <relationshipLabel>MC Triggered Email Keys</relationshipLabel>
    <relationshipName>MC_Triggered_Email_Keys</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>