WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/fields/RepName__c.field-meta.xml
<CustomField>
    <fullName>RepName__c</fullName>
    <label>RepName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>