WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/fields/Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields__c</fullName>
    <description>Required MC fields seperated by a comma</description>
    <inlineHelpText>Required MC fields seperated by a comma</inlineHelpText>
    <label>Required Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>