WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/fields/SFProgramId__c.field-meta.xml
<CustomField>
    <fullName>SFProgramId__c</fullName>
    <label>SFProgramId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>