WexGit/Wex_DX/force-app/main/default/objects/MC_Triggered_Email_Key__mdt/fields/WexAccount__c.field-meta.xml
<CustomField>
    <fullName>WexAccount__c</fullName>
    <label>WexAccount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>